--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
   .bar > b{ display:block; height:100%; background:var(--accent); width:0%; }
   .row-between{ display:flex; align-items:center; justify-content:space-between; gap:8px; }
   .toast{ position:fixed; left:50%; transform:translateX(-50%); bottom:16px; background:#0f172a; border:1px solid #27324a; padding:10px 14px; border-radius:10px; display:none; }
+  #tab-timer { cursor: pointer; }
+#tab-timer button, #tab-timer input, #tab-timer textarea, #tab-timer select { cursor: auto; }
 </style>
 </head>
 <body class="theme-cyan">
@@ -267,6 +269,7 @@ const puzzleSelect=$('#puzzleSelect'), themeSelect=$('#themeSelect');
 const newScrambleBtn=$('#newScrambleBtn'), scrambleEl=$('#scramble');
 const timerDisplay=$('#timerDisplay'), startStopBtn=$('#startStopBtn');
 const inspectionToggle=$('#inspectionToggle'), inspSeconds=$('#inspSeconds'), inspSecLabel=$('#inspSecLabel');
+const tabTimer = $('#tab-timer');   // toute la page Timer
 const dnfBtn=$('#dnfBtn'), plus2Btn=$('#plus2Btn'), saveBtn=$('#saveBtn'), delLastBtn=$('#delLastBtn');
 const pointsChip=$('#pointsChip'), leagueChip=$('#leagueChip'), trophyBar=$('#trophyBar'), trophyText=$('#trophyText');
 const statLast=$('#stat-last'), statPB=$('#stat-pb'), statAo5=$('#stat-ao5'), statAo12=$('#stat-ao12'), recentList=$('#recentList');
@@ -341,6 +344,9 @@ const Scramble = {
 
 /* ====== Timer ====== */
 let running=false, startTs=0, holdArmed=false, inspectionLeft=0, mode=null;
+let clickCooldown = false;     // petit verrou après un stop
+let lastToggleAt = 0;          // anti-double clic global
+let clickCooldown = false; // empêche un double clic immédiat
 let currentDNF=false, currentPlus2=false, currentScramble='';
 
 function newScramble(){
@@ -352,23 +358,58 @@ function newScramble(){
 }
 
 function toggleTimer(){
-  if(!running){
-    if(inspectionToggle.checked && inspectionLeft<=0){
-      inspectionLeft = (state.settings.inspSec||15)*1000;
-      tickInspection(); return;
+  const now = performance.now();
+
+  // anti-double tap global (start/stop rapprochés)
+  if (clickCooldown || (now - lastToggleAt) < 350) return;
+  lastToggleAt = now;
+
+  if (!running){
+    // au moindre tap qui arrive, on annule toute attente de "hold" précédente
+    holdArmed = false;
+
+    // Inspection : si activée et pas encore lancée, on lance l'inspection
+    if (inspectionToggle.checked && inspectionLeft <= 0){
+      inspectionLeft = (state.settings.inspSec || 15) * 1000;
+      tickInspection();
+      return;
     }
-    if(state.settings.hold){ holdArmed=true; timerDisplay.textContent='—'; setTimeout(()=>{ if(holdArmed) doStart(); },500); }
-    else doStart();
-  }else doStop();
+
+    // Si inspection est affichée et l'utilisateur retape → on démarre direct
+    if (inspectionLeft > 0){
+      inspectionLeft = 0;
+      timerDisplay.textContent = '00.00';
+      doStart();
+      return;
+    }
+
+    // Hold optionnel
+    if (state.settings.hold){
+      holdArmed = true;
+      timerDisplay.textContent = '—';
+      setTimeout(()=>{ if (holdArmed) doStart(); }, 500);
+    } else {
+      doStart();
+    }
+  } else {
+    // STOP
+    doStop();
+
+    // petit verrou pour éviter que le même tap relance un start
+    clickCooldown = true;
+    setTimeout(()=>{ clickCooldown = false; }, 350);
+  }
 }
 function doStart(){ running=true; holdArmed=false; currentDNF=false; currentPlus2=false; startTs=performance.now(); loop(); }
 function doStop(){
-  running=false;
-  const t=(performance.now()-startTs)/1000;
-  const final = currentDNF? 'DNF' : (currentPlus2? t+2 : t);
+  holdArmed = false; // <— important : annule toute attente de démarrage différé
+  running = false;
+  const t = (performance.now() - startTs) / 1000;
+  const final = currentDNF ? 'DNF' : (currentPlus2 ? (t+2) : t);
   timerDisplay.textContent = formatTime(final);
-  if(state.settings.autosave && !currentDNF) saveSolve();
-  awardPoints(t); refreshStats();
+  if (state.settings.autosave && !currentDNF) saveSolve();
+  awardPoints(t);
+  refreshStats();
 }
 function loop(){ if(!running) return; const t=(performance.now()-startTs)/1000; timerDisplay.textContent=formatTime(t); requestAnimationFrame(loop); }
 function tickInspection(){
@@ -498,8 +539,10 @@ function download(filename, text){
   }
 }
 
-/* ====== Bindings ====== */
+let eventsBound = false;/* ====== Bindings ====== */
 function bindEvents(){
+  if (eventsBound) return; // empêche de rebinder deux fois
+  eventsBound = true;
   themeSelect.onchange=()=>{ state.theme=themeSelect.value; document.body.className=state.theme; saveState(); };
   puzzleSelect.onchange=()=>{ state.puzzle=puzzleSelect.value; saveState(); newScramble(); refreshStats(); };
   addProfileBtn.onclick=()=>{ const name=prompt('Nom du profil ?'); if(!name) return; const id='p'+Math.random().toString(36).slice(2,8);
@@ -508,9 +551,12 @@ function bindEvents(){
 
   newScrambleBtn.onclick=newScramble;
   startStopBtn.onclick=toggleTimer;
-  tapZone.addEventListener('click', (e)=>{ // tap milieu écran
-    if (!e.target.closest('button') && !e.target.closest('input') && !e.target.closest('textarea') && !e.target.closest('select')) toggleTimer();
-  });
+  tapZone.addEventListener('click', (e) => {
+  if (!e.target.closest('button') && !e.target.closest('input') &&
+      !e.target.closest('textarea') && !e.target.closest('select')) {
+    toggleTimer();
+  }
+});
   document.addEventListener('keydown', e=>{ if(e.code==='Space' && !e.repeat){ e.preventDefault(); toggleTimer(); } });
 
   dnfBtn.onclick=()=>markFlag('dnf');
@@ -563,7 +609,7 @@ function bindEvents(){
 }
 
 /* ====== Start ====== */
-init(); bindEvents(); renderAlgs(); renderHistory();
+init(); renderAlgs(); renderHistory();   // ❌ pas de 2ᵉ bindEvents()
 </script>
 </body>
 </html>
